Fixed scrollbars and spaces

--- a/style.sass
+++ b/style.sass
@@ -9,7 +9,7 @@ th, td
   padding-left: 10px
   padding-right: 10px
   max-width: 200px
-  overflow: scroll
+  overflow: auto
   white-space: nowrap
 
 .version
